java/java-tests/testData/codeInsight/daemonCodeAnalyzer/genericsHighlighting8/IDEA57413.java
class A<T> {
    <T extends A<T>> void foo(T x){}

    void bar(A<?> x){
        foo<error descr="'foo(T)' in 'A' cannot be applied to '(A<capture<?>>)'">(x)</error>;
    }
}
